fixed image sizing on firefox browsers

--- a/app/photolist/photolist.less
+++ b/app/photolist/photolist.less
@@ -40,3 +40,7 @@
 .photo-list-heading {
   padding: 20px;
 }
+
+.img-responsive {
+  width: 100%;
+}
